--- a/Soundfull/Base.lproj/Main.storyboard
+++ b/Soundfull/Base.lproj/Main.storyboard
@@ -102,6 +102,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="bottomButtunConstraints" destination="5pb-vr-2js" id="o9p-9v-MZS"/>
                         <outlet property="categoryTextField" destination="l7O-BK-TDJ" id="WUc-dW-0FQ"/>
                         <outlet property="downloadButton" destination="kZh-NI-sBz" id="zgb-6S-7Pd"/>
                         <outlet property="downloadMusicLabel" destination="3LE-a7-hbU" id="XY7-8O-fBz"/>
@@ -160,8 +161,15 @@
                                 <rect key="frame" x="175" y="276" width="250" height="250"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sDI-kn-3TE">
-                                        <rect key="frame" x="50" y="30" width="150" height="191"/>
+                                        <rect key="frame" x="75" y="75.5" width="100" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="b2Z-v5-GfA"/>
+                                            <constraint firstAttribute="width" constant="100" id="fdV-ai-0eL"/>
+                                        </constraints>
                                         <state key="normal" image="SoundApp_ pause_icon"/>
+                                        <connections>
+                                            <action selector="pausePlayButtonClicked:" destination="D4t-Ko-nZW" eventType="touchUpInside" id="f2C-cU-VTo"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
