--- a/Soundfull/SoundfullMainControl.xib
+++ b/Soundfull/SoundfullMainControl.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15E56a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15E61b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -8,14 +8,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SoundfullMainControl" customModule="Soundfull" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="350" height="370"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="320"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SoundApp_secnd_page" translatesAutoresizingMaskIntoConstraints="NO" id="K90-HV-sFW">
-                    <rect key="frame" x="0.0" y="0.0" width="350" height="370"/>
+                    <rect key="frame" x="0.0" y="0.0" width="300" height="320"/>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DX3-Dq-z8Z">
-                    <rect key="frame" x="150" y="304" width="50" height="50"/>
+                    <rect key="frame" x="125" y="259" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="A3i-VN-tRd"/>
                         <constraint firstAttribute="height" constant="50" id="UD3-KE-Wns"/>
@@ -23,7 +23,7 @@
                     <state key="normal" image="SoundApp_studio_icon"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o8Q-nm-kE9">
-                    <rect key="frame" x="266" y="240" width="50" height="50"/>
+                    <rect key="frame" x="224" y="204" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="UTg-hz-2lF"/>
                         <constraint firstAttribute="height" constant="50" id="wcd-nP-cvY"/>
@@ -31,11 +31,11 @@
                     <state key="normal" image="SoundApp_youtube_icon"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rXD-ab-bbE">
-                    <rect key="frame" x="34" y="240" width="50" height="50"/>
+                    <rect key="frame" x="26" y="204" width="50" height="50"/>
                     <state key="normal" image="SoundApp_link_icon"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Kq-gj-Fns">
-                    <rect key="frame" x="112" y="114" width="125" height="42"/>
+                    <rect key="frame" x="87" y="119" width="125" height="42"/>
                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
                     <state key="normal" title="My Sounds">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -45,10 +45,14 @@
             <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="K90-HV-sFW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="3Ia-tA-88z"/>
+                <constraint firstItem="DX3-Dq-z8Z" firstAttribute="top" secondItem="rXD-ab-bbE" secondAttribute="bottom" constant="5" id="C7n-1I-hGe"/>
                 <constraint firstAttribute="bottom" secondItem="K90-HV-sFW" secondAttribute="bottom" id="CJz-G8-cPs"/>
                 <constraint firstAttribute="trailing" secondItem="K90-HV-sFW" secondAttribute="trailing" id="EaH-86-9fw"/>
+                <constraint firstAttribute="trailing" secondItem="o8Q-nm-kE9" secondAttribute="trailing" constant="26" id="FIt-MI-hrT"/>
+                <constraint firstItem="rXD-ab-bbE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="26" id="Oye-aW-q3W"/>
                 <constraint firstItem="rXD-ab-bbE" firstAttribute="bottom" secondItem="o8Q-nm-kE9" secondAttribute="bottom" id="TBr-se-skz"/>
-                <constraint firstItem="8Kq-gj-Fns" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="-50" id="bfz-WU-Qxh"/>
+                <constraint firstItem="K90-HV-sFW" firstAttribute="leading" secondItem="rXD-ab-bbE" secondAttribute="leading" constant="50" id="a6l-np-bIA"/>
+                <constraint firstItem="8Kq-gj-Fns" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="-20" id="bfz-WU-Qxh"/>
                 <constraint firstItem="8Kq-gj-Fns" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="cdg-zh-BkL"/>
                 <constraint firstItem="DX3-Dq-z8Z" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="d2V-za-WBj"/>
                 <constraint firstItem="DX3-Dq-z8Z" firstAttribute="top" secondItem="K90-HV-sFW" secondAttribute="bottom" constant="-66" id="hHv-tm-geh"/>
@@ -56,9 +60,19 @@
                 <constraint firstItem="K90-HV-sFW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="lcM-GH-cw2"/>
                 <constraint firstItem="o8Q-nm-kE9" firstAttribute="trailing" secondItem="K90-HV-sFW" secondAttribute="trailing" constant="-34" id="lrv-mU-3oL"/>
                 <constraint firstItem="DX3-Dq-z8Z" firstAttribute="top" secondItem="o8Q-nm-kE9" secondAttribute="bottom" constant="14" id="oEL-vf-rmg"/>
-                <constraint firstItem="K90-HV-sFW" firstAttribute="leading" secondItem="rXD-ab-bbE" secondAttribute="leading" constant="-34" id="znu-Og-AMz"/>
+                <constraint firstAttribute="bottom" secondItem="DX3-Dq-z8Z" secondAttribute="bottom" constant="11" id="ocA-V6-RJ5"/>
+                <constraint firstItem="K90-HV-sFW" firstAttribute="leading" secondItem="rXD-ab-bbE" secondAttribute="leading" constant="8" id="znu-Og-AMz"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="a6l-np-bIA"/>
+                    <exclude reference="znu-Og-AMz"/>
+                    <exclude reference="hHv-tm-geh"/>
+                    <exclude reference="oEL-vf-rmg"/>
+                    <exclude reference="lrv-mU-3oL"/>
+                </mask>
+            </variation>
             <connections>
                 <outlet property="galleryButton" destination="DX3-Dq-z8Z" id="Byr-t9-oHv"/>
                 <outlet property="linkButton" destination="rXD-ab-bbE" id="o5i-LL-uq0"/>
