--- a/Soundfull/SoundfullMainControl.xib
+++ b/Soundfull/SoundfullMainControl.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15E61b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -11,24 +11,16 @@
             <rect key="frame" x="0.0" y="0.0" width="300" height="320"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SoundApp_secnd_page" translatesAutoresizingMaskIntoConstraints="NO" id="K90-HV-sFW">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main_control_pic" translatesAutoresizingMaskIntoConstraints="NO" id="K90-HV-sFW">
                     <rect key="frame" x="0.0" y="0.0" width="300" height="320"/>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DX3-Dq-z8Z">
-                    <rect key="frame" x="130" y="261" width="40" height="40"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="40" id="A3i-VN-tRd"/>
-                        <constraint firstAttribute="height" constant="40" id="UD3-KE-Wns"/>
-                    </constraints>
-                    <state key="normal" image="SoundApp_studio_icon"/>
-                </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o8Q-nm-kE9">
                     <rect key="frame" x="226" y="215" width="40" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="CaE-el-WIQ"/>
                         <constraint firstAttribute="width" constant="40" id="j7u-7k-91x"/>
                     </constraints>
-                    <state key="normal" image="SoundApp_youtube_icon"/>
+                    <state key="normal" image="SoundApp_studio_icon"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rXD-ab-bbE">
                     <rect key="frame" x="35" y="210" width="40" height="40"/>
@@ -48,8 +40,8 @@
             </subviews>
             <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstItem="rXD-ab-bbE" firstAttribute="top" secondItem="K90-HV-sFW" secondAttribute="bottom" constant="-110" id="24T-PK-wh8"/>
                 <constraint firstItem="K90-HV-sFW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="3Ia-tA-88z"/>
-                <constraint firstItem="DX3-Dq-z8Z" firstAttribute="top" secondItem="rXD-ab-bbE" secondAttribute="bottom" constant="11" id="C7n-1I-hGe"/>
                 <constraint firstAttribute="bottom" secondItem="K90-HV-sFW" secondAttribute="bottom" id="CJz-G8-cPs"/>
                 <constraint firstAttribute="right" secondItem="K90-HV-sFW" secondAttribute="right" id="EaH-86-9fw"/>
                 <constraint firstAttribute="right" secondItem="o8Q-nm-kE9" secondAttribute="right" constant="34" id="FIt-MI-hrT"/>
@@ -57,11 +49,9 @@
                 <constraint firstItem="rXD-ab-bbE" firstAttribute="bottom" secondItem="o8Q-nm-kE9" secondAttribute="bottom" id="TBr-se-skz"/>
                 <constraint firstItem="8Kq-gj-Fns" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="-20" id="bfz-WU-Qxh"/>
                 <constraint firstItem="8Kq-gj-Fns" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="cdg-zh-BkL"/>
-                <constraint firstItem="DX3-Dq-z8Z" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="d2V-za-WBj"/>
                 <constraint firstItem="rXD-ab-bbE" firstAttribute="top" secondItem="o8Q-nm-kE9" secondAttribute="top" id="jVa-jm-EJz"/>
                 <constraint firstItem="o8Q-nm-kE9" firstAttribute="centerY" secondItem="rXD-ab-bbE" secondAttribute="centerY" id="ju0-AS-Idz"/>
                 <constraint firstItem="K90-HV-sFW" firstAttribute="left" secondItem="iN0-l3-epB" secondAttribute="left" id="lcM-GH-cw2"/>
-                <constraint firstAttribute="bottom" secondItem="DX3-Dq-z8Z" secondAttribute="bottom" constant="19" id="ocA-V6-RJ5"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
@@ -71,18 +61,16 @@
                 </mask>
             </variation>
             <connections>
-                <outlet property="galleryButton" destination="DX3-Dq-z8Z" id="Byr-t9-oHv"/>
+                <outlet property="galleryButton" destination="o8Q-nm-kE9" id="byc-fS-lbQ"/>
                 <outlet property="linkButton" destination="rXD-ab-bbE" id="o5i-LL-uq0"/>
                 <outlet property="mySoundButton" destination="8Kq-gj-Fns" id="X5Q-lj-aqq"/>
-                <outlet property="youtubeButton" destination="o8Q-nm-kE9" id="CLu-M0-HbZ"/>
             </connections>
-            <point key="canvasLocation" x="307.5" y="261.5"/>
+            <point key="canvasLocation" x="307" y="261"/>
         </view>
     </objects>
     <resources>
         <image name="SoundApp_link_icon" width="50" height="50"/>
-        <image name="SoundApp_secnd_page" width="750" height="762"/>
         <image name="SoundApp_studio_icon" width="42" height="36"/>
-        <image name="SoundApp_youtube_icon" width="72" height="45"/>
+        <image name="main_control_pic" width="750" height="762"/>
     </resources>
 </document>
